config/k8s/app/tasks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-solid-app-tasks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-solid-app-tasks
  template:
    metadata:
      labels:
        app: my-solid-app-tasks
    spec:
      imagePullSecrets:
        - name: my-solid-app-dockerhub
      containers:
        - name: my-solid-app-tasks
          image: <dockerhub-namespace>/my-solid-app-tasks
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
