config/k8s/app/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-solid-app-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-solid-app-redis
  template:
    metadata:
      labels:
        app: my-solid-app-redis
    spec:
      containers:
        - name: redis
          image: redis:7
          args: ["redis-server", "--appendonly", "yes"]
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: my-solid-app-redis
spec:
  type: ClusterIP
  selector:
    app: my-solid-app-redis
  ports:
    - port: 6379
      targetPort: 6379
